codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__memories_settings_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Memories
  Choose how Ore uses and creates memories. Changes are saved to config.toml


› [x] Use memories       Use memories starting with the next thread
  [ ] Generate memories  Generate memories from this thread and future threads
  Reset all memories     Clear local memory files and summaries without changing
                         existing threads


  Learn more: https://developers.openai.com/codex/memories

  space toggle · enter save/select · esc cancel
